Bug 1216460 - [2.2] Refactor SourceBuffer frame eviction and threshold defaults. r=jya

* Move eviction handling out of SourceBuffer into TrackBuffersManager
* Separate audio and video eviction thresholds
* Reduce default audio eviction threshold to 15MB