dom/media/mediasource/SourceBufferContentManager.h
@@ -107,6 +107,7 @@ public:
   virtual void SetGroupStartTimestamp(const media::TimeUnit& aGroupStartTimestamp) {}
   virtual void RestartGroupStartTimestamp() {}
   virtual media::TimeUnit GroupEndTimestamp() = 0;
+  virtual int64_t EvictionThreshold() const = 0;
 
 protected:
   virtual ~SourceBufferContentManager() { }
